fix responsive on mobile

--- a/public_html/static/css/scss/responsive/_mobile.scss
+++ b/public_html/static/css/scss/responsive/_mobile.scss
@@ -34,6 +34,9 @@
 	.Quran .bismillah{
 		font-size: 3.3em;
 	}
+	.Quran .readerMode{
+		font-size: 1.4em;
+	}
 	.ayeBox{
 		padding: 0.5em;
 	}
