--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -5730,6 +5730,9 @@ html[lang="ar"] #soreha .c7 span {
   .Quran .bismillah {
     font-size: 3.3em; }
 
+  .Quran .readerMode {
+    font-size: 1.4em; }
+
   .ayeBox {
     padding: 0.5em; }
 
